force-app/main/default/objects/Invoice_Line_Item__c/fields/DOS_Sales_Check_No__c.field-meta.xml
<CustomField>
    <fullName>DOS_Sales_Check_No__c</fullName>
    <label>DOS Sales Check No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>