force-app/main/default/objects/Invoice_Line_Item__c/fields/High_Level_Item_No__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Item_No__c</fullName>
    <label>High Level Item No</label>
    <length>5</length>
    <type>Text</type>
</CustomField>