force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Id_Line_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Id_Line_No__c</fullName>
    <externalId>true</externalId>
    <label>Invoice Id Line No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>