force-app/main/default/objects/Invoice_Line_Item__c/fields/Order_Date_Entered__c.field-meta.xml
<CustomField>
    <fullName>Order_Date_Entered__c</fullName>
    <formula>Invoice__r.Order__r.CreatedDate</formula>
    <label>Order Date Entered</label>
    <type>DateTime</type>
</CustomField>