force-app/main/default/objects/Invoice_Line_Item__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <formula>Product__r.Description</formula>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>