force-app/main/default/objects/Invoice_Line_Item__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <length>3</length>
    <type>Text</type>
</CustomField>